<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gleamsoft.developer.appaudit.MainActivity"
    android:id="@+id/main_layout"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt_main_title"
        android:id="@+id/id_txt_main_title"
        android:textStyle="bold"
        android:textSize="30dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="56dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_ck_main"
        android:id="@+id/ck_audit_ird"
        android:checked="true"
        android:layout_above="@+id/btn_exit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="83dp"
        android:textStyle="bold"
        android:textSize="24dp"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_ck_aud_ven"
        android:id="@+id/ck_audit_venc"
        android:checked="false"
        android:layout_alignTop="@+id/ck_audit_ird"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="39dp"
        android:textStyle="bold"
        android:textSize="24dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_btn_main_exit"
        android:id="@+id/btn_exit"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_alignTop="@+id/btn_main_setup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_btn_main_next"
        android:id="@+id/btn_main_setup"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginBottom="37dp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/id_txt_main_title"
        android:layout_alignEnd="@+id/id_txt_main_title"
        android:layout_toRightOf="@+id/btn_exit"
        android:layout_toEndOf="@+id/btn_exit"
        android:layout_marginLeft="5dp"/>


</RelativeLayout>
